Fix wrapping in table components

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -211,7 +211,7 @@
 	font-weight: $font-weight-normal;
 	display: flex;
 	justify-content: space-between;
-	height: 1.75rem;
+	/*height: 1.75rem;*/
 	padding: 0 1rem;
 	@include sc(--modal-dark-c);
 	@include css4 {
@@ -221,8 +221,10 @@
 	.header-th {
 		font-size: 0.75rem;
 		flex: 1;
-		padding: 0.35rem 0.35rem 0.35rem 0;
-		@include overflow-ellipsis;
+		display: flex;
+		align-items: center;
+		padding: 0.35rem 0.375rem;
+		/*@include overflow-ellipsis;*/
 	}
 }
 
@@ -233,7 +235,7 @@
 	padding: 1rem;
 
 	> .product-row {
-		height: 1.75rem;
+		/*height: 1.75rem;*/
 		border-radius: 0.25rem;
 		margin-bottom: 0.375rem;
 		display: flex;
@@ -246,10 +248,11 @@
 			font-size: 0.75rem;
 			display: flex;
 			flex: 1;
-			line-height: 1.75rem;
+			/*line-height: 1.75rem;*/
 			align-items: center;
-			padding-right: 0.25rem;
-			@include overflow-ellipsis;
+			/*padding-right: 0.25rem;*/
+			/*@include overflow-ellipsis;*/
+			padding: 0.35rem 0rem;
 
 			&:first-child {
 				@include sc(--modal-primary-c);
